<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/emblem"
        android:layout_centerInParent="true"/>
    <TextView
        android:id="@+id/mordhindi_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/mord_hindi"
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/govtindiahindi_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/mordhindi_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/govtindia_hindi"
        android:textSize="11sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/mord_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/govtindiahindi_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/mord"
        android:textSize="13sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/govtindia_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:layout_below="@+id/mord_textview"
        android:layout_centerHorizontal="true"
        android:text="@string/govtindia"
        android:textSize="11sp"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/version_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/footer"
        android:text="@string/version"
        android:textSize="14sp"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/header3" />



</RelativeLayout>