<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.ActivityFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/top_card_view"
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:id="@+id/text_home"
                        android:padding="@dimen/space_4dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_1"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="@dimen/space_4dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_2"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="@dimen/space_4dp"
                        android:layout_marginLeft="@dimen/space_5dp"
                        android:layout_marginRight="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_3_b"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="@dimen/space_4dp"
                        android:layout_marginLeft="@dimen/space_5dp"
                        android:layout_marginRight="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_3_c"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="@dimen/space_4dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_3"
                        android:lineSpacingExtra="5dp"
                        android:textSize="@dimen/text_16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="@dimen/space_4dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_4"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>



            <com.google.android.material.card.MaterialCardView
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_5dp"
                    android:orientation="vertical">

                    <TextView
                        android:justificationMode="inter_word"
                        android:padding="3dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_7"
                        android:lineSpacingExtra="5dp"
                        android:textSize="@dimen/text_16sp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                    <TextView
                        android:gravity="left|right"
                        android:justificationMode="inter_word"
                        android:padding="3dp"
                        android:layout_margin="@dimen/space_5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_8"
                        android:lineSpacingExtra="5dp"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat_regular" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_margin="@dimen/space_10dp"
                app:strokeWidth="1dp"
                android:backgroundTint="@color/gray"
                style="@style/carViewTheme">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/space_5dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/nrlm_framework"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/text_home"
                            android:layout_marginLeft="@dimen/space_5dp"
                            android:layout_marginTop="@dimen/space_10dp"
                            android:layout_marginRight="@dimen/space_5dp"
                            android:layout_marginBottom="@dimen/space_10dp"
                            android:padding="3dp"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/rsz_nrlm_arrow" />
                    </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>
</layout>